FIxing contrast for Accessible Class Portal Checkpoint 2

--- a/css/index.css
+++ b/css/index.css
@@ -143,7 +143,7 @@ main {
             font-size: 1.3em;
         }
         #project-list nav ul li a:link {
-            color: #346FC2;
+            color: #11438F;
         }
         #project-list nav ul li a:visited {
             color: #7D00FA;
